Update 1. Three ways to import stock data.md

--- a/Exercise1 - Korean stock market analysis/1. Three ways to import stock data.md
+++ b/Exercise1 - Korean stock market analysis/1. Three ways to import stock data.md
@@ -273,7 +273,9 @@ pd.read_csv('data/stock_code.csv').head()
 </table>
   
   
-****
+```python
+
+```
 ### 1. 네이버금융에서 종목 데이터 가져오기  
 - 참고자료 : https://excelsior-cjh.tistory.com/109
 
@@ -1002,7 +1004,9 @@ stock_data.info()
     memory usage: 10.9 KB
 
 
+```python
 
+```
 ### 3. Yahoo finance 사용하기
 
 - 참고자료 : [[개발자 깃허브]](https://github.com/ranaroussi/yfinance)  
