Update 1. Three ways to import stock data.md

--- a/Exercise1 - Korean stock market analysis/1. Three ways to import stock data.md
+++ b/Exercise1 - Korean stock market analysis/1. Three ways to import stock data.md
@@ -1,10 +1,10 @@
 # Stock data analysis
 #### part1 : Three ways to import stock data
 
-<div style="text-align: right"> <b>Author : Kwang Myung Yu</b></div> 
+**Kwang Myung Yu** 
 
-<div style="text-align: right"> Initial upload: 2020.07.21 </div> 
-<div style="text-align: right"> Last update: 2020.07.23 </div> 
+Initial upload: 2020.07.21 
+Last update: 2020.07.23 
 
 
 
