:truck: Rename jupyter files
Signed-off-by: Kwang Myung Yu <sguys99@gmail.com>

--- a/01. Understanding datetime library.ipynb
+++ b/01. Understanding datetime library.ipynb
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2020, 7, 19, 18, 39, 5, 924849)"
+       "datetime.datetime(2024, 10, 30, 8, 35, 14, 289505)"
       ]
      },
      "execution_count": 8,
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2020, 7, 19, 18, 39, 5, 944769)"
+       "datetime.datetime(2024, 10, 30, 8, 35, 14, 296655)"
       ]
      },
      "execution_count": 9,
@@ -221,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19 18:39:05.944769\n"
+      "2024-10-30 08:35:14.296655\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19\n"
+      "2024-10-30\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18:39:05\n"
+      "08:35:14\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19 18:39:05\n"
+      "2024-10-30 08:35:14\n"
      ]
     }
    ],
@@ -365,9 +365,18 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-10-30 08:35:14.343714\n"
+     ]
+    }
+   ],
    "source": [
-    "today = datetime.now()"
+    "today = datetime.now()\n",
+    "print(today)"
    ]
   },
   {
@@ -379,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19\n"
+      "2024-10-30\n"
      ]
     }
    ],
@@ -397,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18:39:06.014582\n"
+      "08:35:14.343714\n"
      ]
     }
    ],
@@ -415,11 +424,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19 18:39:06.014582\n"
+      "2024-10-30 08:35:14.343714\n"
      ]
     }
    ],
    "source": [
+    "# 날짜와 시간 합치기\n",
     "dateTime = datetime.combine(date, nowTime)\n",
     "print(dateTime)"
    ]
@@ -440,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19 18:39:06.051484\n"
+      "2024-10-30 08:35:14.358460\n"
      ]
     }
    ],
@@ -458,9 +468,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020\n",
-      "7\n",
-      "19\n"
+      "2024\n",
+      "10\n",
+      "30\n"
      ]
     }
    ],
@@ -495,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-19\n"
+      "2024-10-30\n"
      ]
     }
    ],
@@ -513,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-20\n"
+      "2024-10-31\n"
      ]
     }
    ],
@@ -669,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "freq 관련 주요 인자는 다음과 같다.  [[참고자료]](https://datascienceschool.net/view-notebook/8959673a97214e8fafdb159f254185e9/)\n",
+    "freq 관련 주요 인자는 다음과 같다.\n",
     "- s: 초\n",
     "- T: 분\n",
     "- H: 시간\n",
@@ -727,11 +737,11 @@
     {
      "data": {
       "text/plain": [
-       "2020-07-01    1.118114\n",
-       "2020-07-02   -2.379452\n",
-       "2020-07-03    0.037745\n",
-       "2020-07-04   -1.739190\n",
-       "2020-07-05   -1.603245\n",
+       "2020-07-01   -0.186761\n",
+       "2020-07-02    0.608828\n",
+       "2020-07-03    1.199585\n",
+       "2020-07-04   -1.284311\n",
+       "2020-07-05   -0.566900\n",
        "Freq: D, dtype: float64"
       ]
      },
@@ -805,38 +815,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-07-01</th>\n",
-       "      <td>-0.125984</td>\n",
-       "      <td>1.042849</td>\n",
-       "      <td>-1.143504</td>\n",
-       "      <td>-0.638879</td>\n",
+       "      <td>-1.968316</td>\n",
+       "      <td>-0.222213</td>\n",
+       "      <td>-0.028248</td>\n",
+       "      <td>1.624936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-07-02</th>\n",
-       "      <td>-1.550629</td>\n",
-       "      <td>-0.085687</td>\n",
-       "      <td>0.929776</td>\n",
-       "      <td>0.946581</td>\n",
+       "      <td>0.865902</td>\n",
+       "      <td>-1.415151</td>\n",
+       "      <td>-0.179038</td>\n",
+       "      <td>-0.448025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-07-03</th>\n",
-       "      <td>0.363418</td>\n",
-       "      <td>-0.727663</td>\n",
-       "      <td>0.955006</td>\n",
-       "      <td>0.360029</td>\n",
+       "      <td>-0.480661</td>\n",
+       "      <td>0.320168</td>\n",
+       "      <td>0.849722</td>\n",
+       "      <td>-1.139770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-07-04</th>\n",
-       "      <td>-0.819180</td>\n",
-       "      <td>-1.300561</td>\n",
-       "      <td>-1.275106</td>\n",
-       "      <td>-0.505708</td>\n",
+       "      <td>-1.681602</td>\n",
+       "      <td>0.242585</td>\n",
+       "      <td>0.149854</td>\n",
+       "      <td>-0.073044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-07-05</th>\n",
-       "      <td>1.583471</td>\n",
-       "      <td>-0.566225</td>\n",
-       "      <td>-1.513520</td>\n",
-       "      <td>-1.494187</td>\n",
+       "      <td>-0.510635</td>\n",
+       "      <td>-2.138777</td>\n",
+       "      <td>-0.052672</td>\n",
+       "      <td>0.094189</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -844,11 +854,11 @@
       ],
       "text/plain": [
        "                   A         B         C         D\n",
-       "2020-07-01 -0.125984  1.042849 -1.143504 -0.638879\n",
-       "2020-07-02 -1.550629 -0.085687  0.929776  0.946581\n",
-       "2020-07-03  0.363418 -0.727663  0.955006  0.360029\n",
-       "2020-07-04 -0.819180 -1.300561 -1.275106 -0.505708\n",
-       "2020-07-05  1.583471 -0.566225 -1.513520 -1.494187"
+       "2020-07-01 -1.968316 -0.222213 -0.028248  1.624936\n",
+       "2020-07-02  0.865902 -1.415151 -0.179038 -0.448025\n",
+       "2020-07-03 -0.480661  0.320168  0.849722 -1.139770\n",
+       "2020-07-04 -1.681602  0.242585  0.149854 -0.073044\n",
+       "2020-07-05 -0.510635 -2.138777 -0.052672  0.094189"
       ]
      },
      "execution_count": 37,
@@ -903,7 +913,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2020-07-01 00:00:00', freq='D')"
+       "Timestamp('2020-07-01 00:00:00')"
       ]
      },
      "execution_count": 39,
@@ -923,7 +933,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2020-07-31 00:00:00', freq='D')"
+       "Timestamp('2020-07-31 00:00:00')"
       ]
      },
      "execution_count": 40,
@@ -952,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
